--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Hyper Match</title>
   <link rel="stylesheet" href="css/reset.css" type="text/css">
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/fonts.css" type="text/css">
 </head>
 
 <body>
